force-app/main/default/objects/Account/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <description>Team abbreviation (e.g., "ARS" for Arsenal, "LAL" for Lakers)</description>
    <label>Abbreviation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>