force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <description>Customer category for this account</description>
    <inlineHelpText>Select the customer category (Individual User, Team, Brand, Media, etc.)</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual User</fullName>
            </value>
            <value>
                <fullName>Content Creator</fullName>
            </value>
            <value>
                <fullName>Sports Team - Professional</fullName>
            </value>
            <value>
                <fullName>Sports Team - Semi-Pro</fullName>
            </value>
            <value>
                <fullName>Sports Team - Amateur</fullName>
            </value>
            <value>
                <fullName>Brand/Sponsor</fullName>
            </value>
            <value>
                <fullName>Media Company</fullName>
            </value>
            <value>
                <fullName>Sports League</fullName>
            </value>
            <value>
                <fullName>Technology Company</fullName>
            </value>
            <value>
                <fullName>Betting Company</fullName>
            </value>
            <value>
                <fullName>Strategic Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>