force-app/main/default/objects/Account/fields/Active_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Active_Subscriptions__c</fullName>
    <label>Active Subscriptions</label>
    <description>Count of active subscriptions for this account</description>
    <inlineHelpText>Number of active subscriptions</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>