force-app/main/default/objects/Account/fields/Current_League_Rank__c.field-meta.xml
<CustomField>
    <fullName>Current_League_Rank__c</fullName>
    <description>Dynamic ranking (requires frequent updates)</description>
    <label>Current League Rank</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>