force-app/main/default/objects/Account/fields/Customer_Since__c.field-meta.xml
<CustomField>
    <fullName>Customer_Since__c</fullName>
    <label>Customer Since</label>
    <description>Date of first purchase</description>
    <inlineHelpText>Date when this account became a customer</inlineHelpText>
    <type>Date</type>
</CustomField>