force-app/main/default/objects/Account/fields/ESPN_ID__c.field-meta.xml
<CustomField>
    <fullName>ESPN_ID__c</fullName>
    <description>The anchor for upserts from ESPN API. Universal field name for all sports.</description>
    <externalId>true</externalId>
    <label>ESPN ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>