force-app/main/default/objects/Account/fields/ESPN_Team_ID__c.field-meta.xml
<CustomField>
    <fullName>ESPN_Team_ID__c</fullName>
    <externalId>true</externalId>
    <label>ESPN Team ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>