force-app/main/default/objects/Account/fields/Gender_Category__c.field-meta.xml
<CustomField>
    <fullName>Gender_Category__c</fullName>
    <label>Gender Category</label>
    <description>Gender category for teams (Men&apos;s, Women&apos;s, Both)</description>
    <inlineHelpText>Select if this is a Men&apos;s, Women&apos;s, or Mixed team</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Men&apos;s Team</fullName>
            </value>
            <value>
                <fullName>Women&apos;s Team</fullName>
            </value>
            <value>
                <fullName>Mixed/Both</fullName>
            </value>
            <value>
                <fullName>N/A (not a team)</fullName>
                <default>true</default>
                <label>N/A (not a team)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>