force-app/main/default/objects/Account/fields/Gender_Class__c.field-meta.xml
<CustomField>
    <fullName>Gender_Class__c</fullName>
    <description>Gender classification</description>
    <label>Gender Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Men's Team</fullName>
            </value>
            <value>
                <fullName>Women's Team</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>