force-app/main/default/objects/Account/fields/Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Score__c</fullName>
    <label>Health Score</label>
    <description>Customer health score (0-100)</description>
    <inlineHelpText>Customer health score from 0 to 100</inlineHelpText>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>