force-app/main/default/objects/Account/fields/League__c.field-meta.xml
<CustomField>
    <fullName>League__c</fullName>
    <description>ESPN league code (eng.1, usa.nwsl, nba, wnba)</description>
    <externalId>true</externalId>
    <inlineHelpText>ESPN league identifier for API sync</inlineHelpText>
    <label>League</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>