force-app/main/default/objects/Account/fields/Lifetime_Value__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Value__c</fullName>
    <label>Lifetime Value</label>
    <description>Total revenue from this account all-time</description>
    <inlineHelpText>Total revenue generated from this customer</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>