force-app/main/default/objects/Account/fields/Logo_Url__c.field-meta.xml
<CustomField>
    <fullName>Logo_Url__c</fullName>
    <description>Link to the CDN image (universal field name replacing Team_Logo_URL__c)</description>
    <label>Logo URL</label>
    <type>Url</type>
</CustomField>