force-app/main/default/objects/Account/fields/Media_Partner__c.field-meta.xml
<CustomField>
    <fullName>Media_Partner__c</fullName>
    <label>Media Partner</label>
    <description>Indicates if this account is a media licensing customer</description>
    <inlineHelpText>Check if this is a media licensing partner</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>