force-app/main/default/objects/Account/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <label>Primary Contact</label>
    <description>Main decision maker for this account</description>
    <inlineHelpText>Select the primary contact for this account</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Primary Contact)</relationshipLabel>
    <relationshipName>Primary_Accounts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>