force-app/main/default/objects/Account/fields/Renewal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Owner__c</fullName>
    <label>Renewal Owner</label>
    <description>Account manager responsible for renewals</description>
    <inlineHelpText>Select the account manager for this account</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Renewal Accounts</relationshipLabel>
    <relationshipName>Renewal_Accounts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>