force-app/main/default/objects/Account/fields/Sponsorship_Interest__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Interest__c</fullName>
    <label>Sponsorship Interest</label>
    <description>Indicates potential interest as a sponsor</description>
    <inlineHelpText>Check if this account is a potential sponsor</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>