force-app/main/default/objects/Account/fields/Stadium_Name__c.field-meta.xml
<CustomField>
    <fullName>Stadium_Name__c</fullName>
    <label>Stadium Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>