force-app/main/default/objects/Account/fields/Team_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Team_Logo_URL__c</fullName>
    <label>Team Logo URL</label>
    <type>Url</type>
</CustomField>