force-app/main/default/objects/Account/fields/Team_Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>Team_Primary_Color__c</fullName>
    <label>Team Primary Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>