force-app/main/default/objects/Account/fields/Team_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Short_Name__c</fullName>
    <label>Team Short Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>