force-app/main/default/objects/Account/fields/Total_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_ARR__c</fullName>
    <label>Total ARR</label>
    <description>Sum of annual recurring revenue for this account</description>
    <inlineHelpText>Total Annual Recurring Revenue</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>