force-app/main/default/objects/Account/fields/Total_Awards__c.field-meta.xml
<CustomField>
    <fullName>Total_Awards__c</fullName>
    <description>Total awards won by players of this team</description>
    <label>Total Awards</label>
    <summaryForeignKey>Award__c.Team__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>