force-app/main/default/objects/Account/fields/Total_MRR__c.field-meta.xml
<CustomField>
    <fullName>Total_MRR__c</fullName>
    <label>Total MRR</label>
    <description>Sum of monthly recurring revenue for this account</description>
    <inlineHelpText>Total Monthly Recurring Revenue</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>