force-app/main/default/objects/Account/fields/Total_Trophies__c.field-meta.xml
<CustomField>
    <fullName>Total_Trophies__c</fullName>
    <description>Total team trophies</description>
    <label>Total Trophies</label>
    <summaryFilterItems>
        <field>Award__c.Award_Category__c</field>
        <operation>equals</operation>
        <value>Team Trophy</value>
    </summaryFilterItems>
    <summaryForeignKey>Award__c.Team__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>