force-app/main/default/objects/Account/fields/Venue_Name__c.field-meta.xml
<CustomField>
    <fullName>Venue_Name__c</fullName>
    <description>Stadium/Arena name (universal field name replacing Stadium_Name__c)</description>
    <label>Venue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>