force-app/main/default/objects/Account/fields/Women_Sports_Focus__c.field-meta.xml
<CustomField>
    <fullName>Women_Sports_Focus__c</fullName>
    <label>Women&apos;s Sports Focus</label>
    <description>Indicates if this account primarily focuses on women&apos;s sports</description>
    <inlineHelpText>Check if this account primarily focuses on women&apos;s sports</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>